# vLLM-metax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  env.sh  mkdocs.yaml  pyproject.toml  setup.py  use_existing_metax.py  use_existing_torch.py  version_tools.py
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: 100-documentation.yml  200-installation.yml  300-usage.yml  400-bug-report.yml  700-performance-discussion.yml  750-RFC.yml
.github/workflows/: daily_tests.yaml  pre-commit.yml  update_tag.yml  vllm_metax_tests.yaml
.modelpath/: all.json  cicd.json  test.json
cmake/: hipify.py
csrc/: activation_kernels.cu  cache.h  cache_kernels.cu  cuda_compat.h  cuda_utils.h  cuda_utils_kernels.cu  cuda_view.cu  cumem_allocator.cpp  custom_all_reduce.cuh  dispatch_utils.h  layernorm_kernels.cu  layernorm_quant_kernels.cu  ops.h  permute_cols.cu  pos_encoding_kernels.cu  sampler.cu  torch_bindings.cpp  type_convert.cuh
csrc/attention/: attention_dtypes.h  attention_generic.cuh  attention_kernels.cuh  attention_utils.cuh  (+8 more)
docker/: build_image.sh  reference.Dockerfile  vllm_metax.Dockerfile  vllm_ubi9_building_instructions.md
docs/: .nav.yml  README.md
requirements/: build.txt  common.txt  constraints.txt  cuda.txt  dev.txt  docs.txt  maca.txt  maca_private.txt  test.in  test.txt
tools/: check_spdx_header.py  check_triton_import.py  model_list.json  mypy.sh  qa_model_list.json  test_model.py
vllm_metax/: __init__.py  _custom_ops.py  collect_env.py  envs.py  platform.py  utils.py  version.py
vllm_metax_plugin/: __init__.py  _custom_ops.py  config.py  envs.py  platform.py  utils.py  version.py
(+348 files in other folders)
